--- a/Microservices/eMart/login-service/src/main/resources/application.properties
+++ b/Microservices/eMart/login-service/src/main/resources/application.properties
@@ -21,3 +21,4 @@ logging.level.com.emart=debug
 logging.level.org.hibernate.SQL= info
 logging.level.org.hibernate.type.descriptor.sql= info
 
+spring.http.multipart.enabled=true
