--- a/Angular/eMart/package.json
+++ b/Angular/eMart/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.0.3",
     "bootstrap": "^4.4.1",
     "mydatepicker": "^9.0.1",
+    "ng2-file-upload": "^1.4.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
